k3s/apps/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: homelab
  labels:
    app: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: lscr.io/linuxserver/calibre-web:latest
          ports:
            - name: http
              containerPort: 8083
          volumeMounts:
            - name: config
              mountPath: /config
            - name: library
              mountPath: /library
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: config
          hostPath:
            path: /var/lib/homelab-data/calibre/
            type: DirectoryOrCreate
        - name: library
          hostPath:
            path: /mnt/murray/media/book/
            type: Directory
