k3s/apps/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: homelab
spec:
  type: ClusterIP
  selector:
    app: calibre
  ports:
    - name: http
      port: 8083
      targetPort: 8083
