k3s/apps/calibre/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre
  namespace: homelab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`books.elaine.pw`)
      kind: Rule
      services:
        - name: calibre
          port: 8083
  tls:
    certResolver: cloudflare
